--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-amplify/ui-react": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.1",
     "zustand": "^4.4.7"
   },
